--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>be.rlab</groupId>
     <artifactId>kotlin-search</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.0</version>
+    <version>1.0.1-SNAPSHOT</version>
 
     <properties>
         <!-- Maven -->
@@ -262,7 +262,7 @@
         <connection>scm:git:git@github.com:f-nyx/kotlin-search.git</connection>
         <developerConnection>scm:git:git@github.com:f-nyx/kotlin-search.git</developerConnection>
         <url>https://github.com/f-nyx/kotlin-search</url>
-        <tag>kotlin-search-1.0.0</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <distributionManagement>
