--- a/pom.xml
+++ b/pom.xml
@@ -40,15 +40,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <lucene.version>8.4.1</lucene.version>
-        <lucene-snowball.version>3.0.3</lucene-snowball.version>
-        <commons-lang.version>3.9</commons-lang.version>
-        <commons-codec.version>1.13</commons-codec.version>
-        <qos.logback.logback-classic.version>1.2.3</qos.logback.logback-classic.version>
-        <slf4j.all.version>1.7.29</slf4j.all.version>
+        <junit-jupiter.version>5.8.2</junit-jupiter.version>
 
-        <kotlin.version>1.3.61</kotlin.version>
-        <kotlin-coroutines.version>1.3.2</kotlin-coroutines.version>
+        <lucene.version>9.0.0</lucene.version>
+        <commons-codec.version>1.15</commons-codec.version>
+        <logback.version>1.2.10</logback.version>
+        <slf4j.all.version>1.7.32</slf4j.all.version>
+
+        <kotlin.version>1.6.10</kotlin.version>
         <kotlin.code.style>official</kotlin.code.style>
     </properties>
 
@@ -68,30 +67,31 @@
 
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-test-junit</artifactId>
+            <artifactId>kotlin-test-junit5</artifactId>
             <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-engine</artifactId>
+            <version>${junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
 
         <!-- Configuration/utils -->
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-lang3</artifactId>
-            <version>${commons-lang.version}</version>
-        </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
             <version>${commons-codec.version}</version>
         </dependency>
 
-
         <!-- Statistics and NLP -->
-        <dependency>
-            <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-snowball</artifactId>
-            <version>${lucene-snowball.version}</version>
-        </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
             <artifactId>lucene-core</artifactId>
@@ -104,7 +104,7 @@
         </dependency>
         <dependency>
             <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-analyzers-common</artifactId>
+            <artifactId>lucene-analysis-common</artifactId>
             <version>${lucene.version}</version>
         </dependency>
         <dependency>
@@ -120,13 +120,13 @@
         <!-- Polish support -->
         <dependency>
             <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-analyzers-stempel</artifactId>
+            <artifactId>lucene-analysis-stempel</artifactId>
             <version>${lucene.version}</version>
         </dependency>
         <!-- Simplified chinese support -->
         <dependency>
             <groupId>org.apache.lucene</groupId>
-            <artifactId>lucene-analyzers-smartcn</artifactId>
+            <artifactId>lucene-analysis-smartcn</artifactId>
             <version>${lucene.version}</version>
         </dependency>
         <dependency>
@@ -154,13 +154,13 @@
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
-            <version>${qos.logback.logback-classic.version}</version>
+            <version>${logback.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 
     <build>
         <finalName>kotlin-search</finalName>
-        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
@@ -173,6 +173,11 @@
                         <goals>
                             <goal>compile</goal>
                         </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/main/kotlin</sourceDir>
+                            </sourceDirs>
+                        </configuration>
                     </execution>
                     <execution>
                         <id>test-compile</id>
@@ -180,6 +185,11 @@
                         <goals>
                             <goal>test-compile</goal>
                         </goals>
+                        <configuration>
+                            <sourceDirs>
+                                <sourceDir>${project.basedir}/src/test/kotlin</sourceDir>
+                            </sourceDirs>
+                        </configuration>
                     </execution>
                 </executions>
                 <configuration>
@@ -195,8 +205,6 @@
                     <excludes>
                         <!-- exclude any logback configuration from the jar -->
                         <exclude>**/logback.xml</exclude>
-                        <!-- this line excludes env folder entirely from the jar -->
-                        <exclude>**/application.conf</exclude>
                     </excludes>
                 </configuration>
             </plugin>
@@ -264,6 +272,12 @@
                     <nexusUrl>https://oss.sonatype.org/</nexusUrl>
                     <autoReleaseAfterClose>true</autoReleaseAfterClose>
                 </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <!-- JUnit 5 requires Surefire version 2.22.0 or higher -->
+                <version>3.0.0-M1</version>
             </plugin>
         </plugins>
     </build>
