--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>be.rlab</groupId>
     <artifactId>kotlin-search</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.1.0</version>
 
     <name>Kotlin Search</name>
     <description>
@@ -314,7 +314,7 @@
         <connection>scm:git:git@github.com:f-nyx/kotlin-search.git</connection>
         <developerConnection>scm:git:git@github.com:f-nyx/kotlin-search.git</developerConnection>
         <url>https://github.com/f-nyx/kotlin-search</url>
-        <tag>HEAD</tag>
+        <tag>kotlin-search-1.1.0</tag>
     </scm>
 
     <distributionManagement>
