--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <groupId>be.rlab</groupId>
     <artifactId>kotlin-search</artifactId>
     <packaging>jar</packaging>
-    <version>1.0.2-SNAPSHOT</version>
+    <version>1.1.1-SNAPSHOT</version>
 
     <name>Kotlin Search</name>
     <description>
@@ -40,15 +40,18 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-        <junit-jupiter.version>5.8.2</junit-jupiter.version>
+        <junit-jupiter.version>5.9.0</junit-jupiter.version>
 
-        <lucene.version>9.0.0</lucene.version>
+        <lucene.version>9.4.0</lucene.version>
         <commons-codec.version>1.15</commons-codec.version>
-        <logback.version>1.2.10</logback.version>
-        <slf4j.all.version>1.7.32</slf4j.all.version>
+        <logback.version>1.4.4</logback.version>
+        <slf4j.all.version>2.0.3</slf4j.all.version>
 
-        <kotlin.version>1.6.10</kotlin.version>
+        <kotlin.version>1.7.20</kotlin.version>
+        <dokka.version>1.6.10</dokka.version>
         <kotlin.code.style>official</kotlin.code.style>
+        <maven.compiler.source>8</maven.compiler.source>
+        <maven.compiler.target>8</maven.compiler.target>
     </properties>
 
     <dependencies>
@@ -161,6 +164,7 @@
 
     <build>
         <finalName>kotlin-search</finalName>
+        <sourceDirectory>${project.basedir}/src/main/kotlin</sourceDirectory>
         <plugins>
             <plugin>
                 <groupId>org.jetbrains.kotlin</groupId>
@@ -341,10 +345,14 @@
             </activation>
             <build>
                 <plugins>
+                    <!--
+                    WARNING: dokka requires the sourceDirectory attribute in the build section to work.
+                    If you specify the source directories in the kotlin plugin, dokka will not work.
+                    -->
                     <plugin>
                         <groupId>org.jetbrains.dokka</groupId>
                         <artifactId>dokka-maven-plugin</artifactId>
-                        <version>1.5.0</version>
+                        <version>${dokka.version}</version>
                         <executions>
                             <execution>
                                 <phase>package</phase>
