--- a/pom.xml
+++ b/pom.xml
@@ -42,23 +42,23 @@
 
         <junit-jupiter.version>5.9.0</junit-jupiter.version>
 
-        <lucene.version>9.4.0</lucene.version>
-        <commons-codec.version>1.15</commons-codec.version>
-        <logback.version>1.4.4</logback.version>
-        <slf4j.all.version>2.0.3</slf4j.all.version>
+        <lucene.version>9.7.0</lucene.version>
+        <commons-codec.version>1.16.0</commons-codec.version>
+        <logback.version>1.4.8</logback.version>
+        <slf4j.all.version>2.0.7</slf4j.all.version>
 
-        <kotlin.version>1.7.20</kotlin.version>
-        <dokka.version>1.6.10</dokka.version>
+        <kotlin.version>1.9.0</kotlin.version>
+        <dokka.version>1.8.20</dokka.version>
         <kotlin.code.style>official</kotlin.code.style>
-        <maven.compiler.source>8</maven.compiler.source>
-        <maven.compiler.target>8</maven.compiler.target>
+        <maven.compiler.source>11</maven.compiler.source>
+        <maven.compiler.target>11</maven.compiler.target>
     </properties>
 
     <dependencies>
         <!-- Kotlin -->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <artifactId>kotlin-stdlib</artifactId>
             <version>${kotlin.version}</version>
         </dependency>
 
