--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
         <commons-codec.version>1.16.0</commons-codec.version>
         <logback.version>1.4.8</logback.version>
         <slf4j.all.version>2.0.7</slf4j.all.version>
+        <faker.version>1.14.0</faker.version>
 
         <kotlin.version>1.9.0</kotlin.version>
         <dokka.version>1.8.20</dokka.version>
@@ -68,6 +69,7 @@
             <version>${kotlin.version}</version>
         </dependency>
 
+        <!-- Testing -->
         <dependency>
             <groupId>org.jetbrains.kotlin</groupId>
             <artifactId>kotlin-test-junit5</artifactId>
@@ -84,6 +86,12 @@
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
             <version>${junit-jupiter.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.github.serpro69</groupId>
+            <artifactId>kotlin-faker</artifactId>
+            <version>${faker.version}</version>
             <scope>test</scope>
         </dependency>
 
